# vcsapi

./: .cookiecutterrc  .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/vcsapi/: cli.py
tests/: test_vcsapi.py
